@@ -30,7 +30,7 @@
  * Author: Adam Dunkels <adam@sics.se>
  * Modifcations: Christian Walter <wolti@sil.at>
  *
- * $Id: sys_arch.c,v 1.3 2006/09/04 14:39:20 wolti Exp $
+ * $Id: sys_arch.c,v 1.4 2006/09/06 19:14:53 wolti Exp $
  */
 
 /* ------------------------ System includes ------------------------------- */
@@ -86,7 +86,7 @@ typedef struct sys_tcb
     char            name[THREAD_NAME_LEN_MAX];
 } sys_tcb_t;
 
-/* ------------------------ Prototypes 000000------------------------------ */
+/* ------------------------ Prototypes ------------------------------------ */
 int             putchar( int c );
 
 /* ------------------------ Static functions ------------------------------ */
@@ -209,7 +209,6 @@ sys_arch_thread_new( void ( *thread ) ( void *arg ), void *arg, int prio, size_t
      * disabled because xTaskCreate contains a call to taskYIELD( ).
      */
     vPortEnterCritical(  );
-    vTaskSuspendAll(  );
 
     p = tasks;
     i = 0;
@@ -224,10 +223,10 @@ sys_arch_thread_new( void ( *thread ) ( void *arg ), void *arg, int prio, size_t
     }
     else
     {
+        i++;
         while( p->next != NULL )
         {
             p = p->next;
-            i++;
         }
         p->next = pvPortMalloc( sizeof( sys_tcb_t ) );
         p = p->next;
@@ -237,7 +236,7 @@ sys_arch_thread_new( void ( *thread ) ( void *arg ), void *arg, int prio, size_t
     {
         /* Memory allocated. Initialize the data structure. */
         THREAD_INIT( p );
-        ( void )sprintf( p->name, "lwIP%d", i );
+        ( void )snprintf( p->name, THREAD_NAME_LEN_MAX, "lwIP%d", i );
 
         /* Now q points to a free element in the list. */
         if( xTaskCreate( thread, p->name, ssize, arg, prio, &p->pid ) == pdPASS )
@@ -250,7 +249,6 @@ sys_arch_thread_new( void ( *thread ) ( void *arg ), void *arg, int prio, size_t
         }
     }
 
-    ( void )xTaskResumeAll(  );
     vPortExitCritical(  );
     return thread_hdl;
 }
@@ -258,7 +256,7 @@ sys_arch_thread_new( void ( *thread ) ( void *arg ), void *arg, int prio, size_t
 void
 sys_arch_thread_remove( sys_thread_t hdl )
 {
-    sys_tcb_t      *current = tasks, *last;
+    sys_tcb_t      *current = tasks, *prev;
     sys_tcb_t      *toremove = hdl;
     xTaskHandle     pid = ( xTaskHandle ) 0;
 
@@ -269,19 +267,19 @@ sys_arch_thread_remove( sys_thread_t hdl )
     vPortEnterCritical(  );
     if( hdl != NULL )
     {
-        last = NULL;
+        prev = NULL;
         while( ( current != NULL ) && ( current != toremove ) )
         {
-            last = current;
+            prev = current;
             current = current->next;
         }
         /* Found it. */
         if( current == toremove )
         {
             /* Not the first entry in the list. */
-            if( last != NULL )
+            if( prev != NULL )
             {
-                last->next = toremove->next;
+                prev->next = toremove->next;
             }
             else
             {
@@ -291,9 +289,7 @@ sys_arch_thread_remove( sys_thread_t hdl )
                          toremove->timeouts.next == NULL );
             pid = toremove->pid;
             THREAD_INIT( toremove );
-
-            vTaskDelete( toremove->pid );
-
+            vPortFree( toremove );
         }
     }
     /* We are done with accessing the shared datastructure. Release the 
