@@ -1,9 +1,20 @@
 
+2006-09-06 (REL_1_0_2) Christian Walter <wolti@sil.at>:
+ Notes: Fixed bug in FreeRTOS porting layer for STR71X/lwIP target where
+   memory is not freed in the sys_arch_thread_remove function. 
+
+ Detailed notes:
+   - BUG (STR71XTCP): Sys_arch_thread_remove did not free the memory from
+       the TCB.
+   - BUG (STR71XTCP): Unnecessary call to vTaskSuspendAll removed.
+   - BUG (STR71XTCP): Bug with counting variable. The first to lwIP tasks
+       got the same name (lwIP0).
+
 2006-09-04 (REL_1_0_1) Christian Walter <wolti@sil.at>:
  Notes: Fixed bug in serial driver for STR71x target when the ring buffer
    overflows. 
 
- Detailetd notes:
+ Detailed notes:
    - BUG (STR71XTCP): Under high load the ring buffer in the serial driver
        functions might overflow. There was an error with counting the number
        of received characters which corrupted received frames.
